--- a/app/index.html
+++ b/app/index.html
@@ -11,21 +11,19 @@
         <!-- bower:css -->
         <!-- endbower -->
         <!-- endbuild -->
-        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/c3/0.1.29/c3.css">
-
         <!-- build:css styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
         <!-- endbuild -->
 
     </head>
     <body>
-        <div id="chart"></div>
+        <div id="chartContainer"></div>
+        <script src="http://d3js.org/d3.v3.min.js"></script>
+        <script src="http://dimplejs.org/dist/dimple.v1.1.5.min.js"></script>
         <!-- build:js scripts/vendor.js -->
         <!-- bower:js -->
         <!-- endbower -->
         <!-- endbuild -->
-        <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.4.5/d3.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/c3/0.1.29/c3.js"></script>
         <!-- build:js scripts/main.js -->
         <script src="scripts/main.js"></script>
         <!-- endbuild -->
